WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182795
Log the error message when failing to open the database
https://bugs.webkit.org/show_bug.cgi?id=182795
Summary
Log the error message when failing to open the database
youenn fablet
Reported
2018-02-14 09:27:27 PST
Log the error message when failing to open the database
Attachments
Patch
(1.82 KB, patch)
2018-02-14 09:30 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2018-02-16 09:51 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-02-14 09:30:12 PST
Created
attachment 333806
[details]
Patch
youenn fablet
Comment 2
2018-02-14 09:31:36 PST
Looking at the code, it is the first time we would expose SQLiteDatabase::lastErrorMsg() in release log. AIUI, it does not contain any privacy sensitive information.
WebKit Commit Bot
Comment 3
2018-02-15 17:30:41 PST
Comment on
attachment 333806
[details]
Patch Rejecting
attachment 333806
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 333806, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: rdparty/autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output:
http://webkit-queues.webkit.org/results/6526217
WebKit Commit Bot
Comment 4
2018-02-15 18:27:19 PST
Comment on
attachment 333806
[details]
Patch Rejecting
attachment 333806
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 333806, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: rdparty/autoinstalled/mechanize/_urllib2_fork.py", line 332, in _call_chain result = func(*args) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1170, in https_open return self.do_open(conn_factory, req) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_urllib2_fork.py", line 1118, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output:
http://webkit-queues.webkit.org/results/6527099
WebKit Commit Bot
Comment 5
2018-02-15 18:45:13 PST
Comment on
attachment 333806
[details]
Patch Clearing flags on attachment: 333806 Committed
r228548
: <
https://trac.webkit.org/changeset/228548
>
WebKit Commit Bot
Comment 6
2018-02-15 18:45:15 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-02-15 18:46:19 PST
<
rdar://problem/37592399
>
Frédéric Wang Nélar
Comment 8
2018-02-16 03:35:52 PST
@Youenn: It looks like this patch breaks the iOS simulator debug bot: In file included from /Volumes/Data/slave/ios-simulator-11-debug/build/WebKitBuild/Debug-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource470.cpp:1: ./workers/service/server/RegistrationDatabase.cpp:111:98: error: using 'public' format specifier annotation outside of os_log()/os_trace() [-Werror,-Wformat] RELEASE_LOG_ERROR(ServiceWorker, "Failed to open Service Worker registration database: %{public}s", errorMessage->utf8().data()); ~~^~~~~~~~ In file included from /Volumes/Data/slave/ios-simulator-11-debug/build/WebKitBuild/Debug-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource470.cpp:1: In file included from /Volumes/Data/slave/ios-simulator-11-debug/build/Source/WebCore/WebCorePrefix.h:171: In file included from /Volumes/Data/slave/ios-simulator-11-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/FastMalloc.h:26: In file included from /Volumes/Data/slave/ios-simulator-11-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/StdLibExtras.h:34: /Volumes/Data/slave/ios-simulator-11-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/Assertions.h:449:59: note: expanded from macro 'RELEASE_LOG_ERROR' #define RELEASE_LOG_ERROR(channel, format, ...) LOG_ERROR(format, ##__VA_ARGS__) ^ /Volumes/Data/slave/ios-simulator-11-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/Assertions.h:418:80: note: expanded from macro 'LOG_ERROR' #define LOG_ERROR(...) WTFReportError(__FILE__, __LINE__, WTF_PRETTY_FUNCTION, __VA_ARGS__) ^ 1 error generated.
youenn fablet
Comment 9
2018-02-16 08:57:13 PST
Thanks Fred, will look at it.
youenn fablet
Comment 10
2018-02-16 09:51:33 PST
Reopening to attach new patch.
youenn fablet
Comment 11
2018-02-16 09:51:34 PST
Created
attachment 334047
[details]
Patch
WebKit Commit Bot
Comment 12
2018-02-16 10:48:36 PST
Comment on
attachment 334047
[details]
Patch Clearing flags on attachment: 334047 Committed
r228562
: <
https://trac.webkit.org/changeset/228562
>
WebKit Commit Bot
Comment 13
2018-02-16 10:48:37 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 14
2018-02-16 11:28:10 PST
(In reply to WebKit Commit Bot from
comment #12
)
> Comment on
attachment 334047
[details]
> Patch > > Clearing flags on attachment: 334047 > > Committed
r228562
: <
https://trac.webkit.org/changeset/228562
>
The failure is different now: ./workers/service/server/RegistrationDatabase.cpp:113:19: error: use of undeclared identifier 'ServiceWorker' LOG_ERROR(ServiceWorker, "Failed to open Service Worker registration database: %s", errorMessage->utf8().data()); ^ 1 error generated.
https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Debug%20%28Build%29/builds/3907
Chris Dumez
Comment 15
2018-02-16 11:36:14 PST
(In reply to Ryan Haddad from
comment #14
)
> (In reply to WebKit Commit Bot from
comment #12
) > > Comment on
attachment 334047
[details]
> > Patch > > > > Clearing flags on attachment: 334047 > > > > Committed
r228562
: <
https://trac.webkit.org/changeset/228562
> > > The failure is different now: > ./workers/service/server/RegistrationDatabase.cpp:113:19: error: use of > undeclared identifier 'ServiceWorker' > LOG_ERROR(ServiceWorker, "Failed to open Service Worker registration > database: %s", errorMessage->utf8().data()); > ^ > 1 error generated. > >
https://build.webkit.org/builders/
> Apple%20iOS%2011%20Simulator%20Debug%20%28Build%29/builds/3907
Should be fixed by <
https://trac.webkit.org/changeset/228568
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug