Log the error message when failing to open the database https://bugs.webkit.org/show_bug.cgi?id=182795

Patch by Youenn Fablet <youenn@apple.com> on 2018-02-15
Reviewed by Chris Dumez.

No change of behavior.
Print the error message as it does not contain any user private information.

* workers/service/server/RegistrationDatabase.cpp:
(WebCore::RegistrationDatabase::openSQLiteDatabase):

Canonical link: https://commits.webkit.org/198612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228548 268f45cc-cd09-0410-ab3c-d52691b4dbfc